# Work-Related

./: GithubProfiles.txt  README.md  Sub UpdateAssignmentTableFromOutlook().vb  file.txt
Development/: canttouchthis.html  filess.js
Development/Batch/: LAN_settings.bat  lan-settings.bat  msTeam.bat
Development/Culture/: index.html  script.js  style.css
Development/DataMapping/: mappings.json  test1.html  test2.html
Development/Experiments/: test.html  test.js
Development/Games/: GuessTheNumber.html  whack-a-mole.html
Development/KM_Repo_SQL/: KM_XML.sql
Development/MS Teams/: Creating a bot.md
Development/Randomizer/: newrandom.html  random.html
Development/Rewards_calc/: index.html  main.js  objects.html  state.html  style.css
Development/SR Extraction/: Extraction_ProMax.html  Sample.html  sr_extraction_Pro.js  srextraction.js
Development/Sharepoint related/: office365profilephoto.js  queryFolder.js  redirectUsertosubsite.js
Development/fancy/: Item Hover Color Background.html  autocomplete dropdown.html  index.html  (+6 more)
Development/flipper_zero/evil_portal/: CMakeLists.txt  evil_portal_scene_console_output.c
Emails/: Incorrect KM upload.md  KM meeting.md  chatGPT.txt
Ideas/: Ray.md  ReadFromSP.md  Shared Folder Management.md
KM_articles/: Credit Card Promo Complaint.html  PLofferJune2025.html
MS Excel/: formulas
MS Word/: C&IB.MD  C&IB.docx
Notes/: C&IB.MD  CCO CSA.md  Case Study.md  ENBDX.md  Jess.md  Knowledge Management International.md  Knowledge Office Huddle.md  Raised Question.md  SharePoint Library Version Control.md  quotes.md
(+60 files in other folders)
